fix hex logo alignment

--- a/_extensions/stat20slides/slides.scss
+++ b/_extensions/stat20slides/slides.scss
@@ -247,7 +247,8 @@ div.meta-el {
 }
 
 .reveal-header .header-logo {
-  height: .55em;
+  height: 3.5vh;
+  padding-left: 17px;
   cursor: pointer;
 }
 
